--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
                 window.location.href ="https://docs.google.com/spreadsheets/d/1A87-TSGqQvEg0TQdX4C_34WoEZ8An-qlWSOybtvofwU/edit?usp=sharing"
             }
             function redirwhatsapp() {
-                window.location.href ="https://wa.me/;0895321906161"
+                window.location.href ="https://wa.me/0895321906161"
             }
         </script>
     </body>
