--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                     <li><a href="#Program">Introduction</a></li>
                 </ul>
             </nav>
-            <button class="btn-cta" onclick="redirinstagram()">Input Data</button>
+            <button class="btn-cta" onclick="redirinstagram()">Pedoman Teknis</button>
         </header>
         <div class="container">
             <div class="intro">
@@ -66,7 +66,7 @@
         </footer>
         <script>
             function redirinstagram() {
-                window.location.href ="https://docs.google.com/spreadsheets/d/1A87-TSGqQvEg0TQdX4C_34WoEZ8An-qlWSOybtvofwU/edit?usp=sharing"
+                window.location.href ="https://drive.google.com/drive/mobile/folders/1MuGrRfDyYMLqumXvQuhNLfS89uyZ8QZb/1CCamawAO4x5nYObR826OdDykH2UlcHkO/1kMd-35XpGJNSk720_pXaJIvwLjCISy3M/101GKT3w9ZHB5HNw18U66xT_yxl892uck/1544Msm5CEgzuhYPi11PTky7V7Jv5G-np/1tQfdF5Zvj8iL0KI_P5mxvmPQKewuUKnf/19lB3V1xTLxGuj20a-GMRrGP3dKFEKclr?sort=13&direction=a"
             }
             function redirwhatsapp() {
                 window.location.href ="https://wa.me/62895321906161"
